4.5.93
======
- Cache tooltip icons. Since gtk queries it a lot, resulting in too many
  open()'s for loading the pixbuf (bug #4614).
- Rebuild the plugin if the properties dialog is cancelled (bug #4612).
- Set DISPLAY variable so the launcher launches on the correct screen
  (bug #4654 and #4693)).
- Add missing functions in the symbols file (bug #4700).
- Added a libxfce4panel.h header that includes all other headers for
  plugin writers.
- Use -V for version information.
- Fix broken actions button when the panel orientation is changed (bug #4544).
- Fix a lot of compiler warnings with -Werror.
- Make all the labels mnemonic when possible.
- Lot of dialog tweaks when it comes to strings and spacing.
- New xfce4-panel icons.
- Use a location selector for the launcher dialog's working directory.
- Rename Pager to Workspace Switcher and Systray to Notification Area.


4.5.92
======
- Remove signal disconnect left after the patch of bug #4474.
- Fix xrandr problem so it's possible to change the panel's
  monitor after a monitor has been removed (bug #3620).
- Panel does not adhere to 'fullwidth' property when using 
  vertical orientation after restarting (bug #4456).
- Implement SmRestartImmediately (bug #4516).
- Reverse the order of the launcher menu when the panel is on 
  the top of the screen (bug #4450).
- Don't spawn zombies (bug #4490).
- Quote commands in the launcher when selecting an application 
  (bug #4507, bug #4549).
- Restore panel workspace names after panel restart (bug #4589).
- Update the tooltip of the clock when it is visible.


4.5.91
======
- Remove MCS plugin, MCS is deprecated.
- Use changed signal on GtkIconTheme for theme changes (bug #4474).
- Fix crach when removing a panel (bug #4401).
- Fix glib 2.14 dependency (bug #4376).


4.5.90
======
- This fixes bug #4401 (xfce4-panel halted when a panel was removed)
- Fix window manager hints reporting width 1 pixel too wide (bug #3402).
  (Jasper)