@@ -1,3 +1,7 @@
+x.x.xx
+======
+- Fixed extern char** environ is not defined on BSD platforms (bug #4834).
+
 4.5.93
 ======
 - Cache tooltip icons. Since gtk queries it a lot, resulting in too many
